Near-Earth-Objects-API/kubernetes/prod/app-prod-deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: neo-redis-container
          image: redis:6.2
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: neo-<tacc>-data
              mountPath: /data 
      volumes:
        - name: neo-<tacc>-data
          persistentVolumeClaim:
            claimName: neo-<tacc>-data
