Near-Earth-Objects-API/kubernetes/prod/app-prod-deployment-worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-worker-deployment
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: neo-worker-container
          image: jyl2027/neo_api:1.0
          imagePullPolicy: Always
          command: ["python", "worker.py"]
