Near-Earth-Objects-API/kubernetes/prod/app-prod-service-flask.yml
---
apiVersion: v1
kind: Service
metadata:
  name: neo-flask-service
spec:
  type: ClusterIP
  selector:
    app: neo-app
  ports:
  - name: neo-app
    port: 5000
    targetPort: 5000
