Near-Earth-Objects-API/kubernetes/prod/app-prod-ingress-flask.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: neo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "neo-project.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: neo-flask-nodeport-service
              port:
                  number: 5000
